--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.2.0",
 		"react-scripts": "5.0.1",
-		"redux": "^4.2.1"
+		"redux": "^4.2.1",
+		"redux-thunk": "^3.1.0",
+		"thunk": "^0.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
